<resources>
    <!-- App -->
    <string name="app_name">Pex Wallpapers</string>
    <string name="init_class" translatable="false">Initialized</string>
    <!-- UI -->
    <string name="wallpapers">Wallpapers</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="preview">Preview</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="no_favorites">No favorites</string>
    <string name="no_results_found">No results found</string>
    <string name="search_instructions">Tap the magnifying glass to start searching</string>
    <string name="delete_all_favorites">Delete all favorites</string>
    <string name="add_image_toFavorites">Add image to favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_text">Share text</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="home_wallpaper_set">Home screen wallpaper set</string>
    <string name="lock_wallpaper_set">Lock screen wallpaper set</string>
    <string name="home_and_lock_screen_wallpaper_set">Home and Lock screen wallpaper set</string>
    <string name="lock_screen_wallpaper_not_supported">Lock screen wallpaper not supported</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and Lock screen</string>
    <string name="set_wallpaper_on">Set wallpaper on</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="pexels_com_button">Open Pexels.com</string>
    <string name="share_button">Share button</string>
    <string name="heart_image">Heart image</string>
    <string name="back_button">Navigate back button</string>
    <string name="menu">Menu</string>
    <string name="delete_suggestion_button">Delete suggestion button</string>
    <string name="photo_provided_by_pexels">Photo provided by Pexels.com</string>
    <string name="close_wallpaper_info">Close wallpaper info</string>
    <string name="wallpaper_info_button">Wallpaper info button</string>
    <string name="clock">Clock</string>
    <string name="message">Message</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="wallpaper_preview">Wallpaper preview</string>
    <string name="phone">Phone</string>
    <string name="info_button">Info</string>
    <string name="open_image_in_fullscreen_button">Open image in fullscreen</string>
    <string name="done_button">Done</string>
    <string name="you_may_also_like">You may also like:</string>
    <string name="wallpaper_thumbnail">Wallpaper thumbnail</string>
    <string name="photo_by">Photo by:</string>
    <string name="add_to_favorites">Add to favorites</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="support">Support</string>
    <string name="info">Info</string>
    <string name="about_us">About Us</string>
    <string name="automation">Automation</string>
    <string name="data_usage">Data usage</string>
    <string name="download_wallpapers_only_over_wi_fi">Download wallpapers only over Wi-Fi</string>
    <string name="time_range">Time range: </string>
    <string name="push_notifications">Push notifications</string>
    <string name="new_wallpaper_set">New wallpaper set</string>
    <string name="wallpaper_recomendations">Wallpaper recomendations</string>
    <string name="auto_change_wallpaper">Auto change wallpaper</string>
    <string name="change_wallpaper_every">Change wallpaper every:</string>
    <string name="minutes">Minutes</string>
    <string name="minute">Minute</string>
    <string name="hours">Hours</string>
    <string name="hour">Hour</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="weeks">Weeks</string>
    <string name="set_period">Set period</string>
    <string name="sign_out">Sign out</string>
    <string name="reset_settings">Reset settings</string>
    <string name="slide_next">Slide next</string>
    <string name="other">Other</string>

    <string name="rationale_title">We need permission to read external storage</string>
    <string name="rationale_desc">We require access to read external storage permission to be able to backup your previous wallpaper
        just in case you want to revert to it</string>
    <string name="save">Save</string>
    <string name="wallpaper_will_change_in">Wallpaper will change every %1$s %2$s</string>
    <string name="enable">Enable</string>
    <string name="is_disabled">is disabled</string>
    <string name="checking_permissions">Checking permission</string>
    <string name="restore">Restore</string>

    <string name="group_notification_for">This is the % notification group.</string>
    <string name="auto_change_wallpaper_cannot_be_used_nwithout_storage_permission">Auto change wallpaper cannot be used\nREAD EXTERNAL STORAGE\npermission is required</string>
    <string name="fix">Fix</string>
    <string name="previous_wallpaper_has_been_restored">Previous wallpaper has been restored</string>
    <string name="minimum_one_screen_need_to_be_selected">Minimum one screen need to be selected</string>
    <string name="add_minimum_2_wallpapers_to_favorites">Add minimum 2 wallpapers to favorites</string>
</resources>