<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:paddingStart="@dimen/margin_medium"
        android:layout_height="@dimen/toolbar_size">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/toolbar_size"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_large"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/white_transparent"
            android:contentDescription="@string/back_button"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title_textView"
            style="@style/TextStyle.ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/wallpapers" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="@dimen/toolbar_size"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:contentDescription="@string/menu"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_menu_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>